--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_save_text">Save</string>
     <string name="label_profile_text">Profile</string>
+
+    <string name="facebook_app_id">1694922733995611</string>
 </resources>
